# bpo

Программирование/3 семестр/Лабораторные работы/: ~$просы к лаб_раб_3 сем_2023.doc  Вопросы к лаб_раб_3 сем_2023.doc  сроки сдачи лабораторных работ.docx
Программирование/3 семестр/Лабораторные работы/Лаб1/: Metodichka_1.docx  ~$б №1. Рекурсия. Графика_2023.doc  Лаб №1. Рекурсия. Графика_2023.doc  Лаб №1. Рекурсия. Графика_2023.docx
Программирование/3 семестр/Лабораторные работы/Лаб1/ajgiz/: 1_main.cpp  CMakeLists.txt  main.cpp  Прога_Лаба_1.doc
Программирование/3 семестр/Лабораторные работы/Лаб1/ajgiz/bgi/: main.cpp
Программирование/3 семестр/Лабораторные работы/Лаб2/: Лаб №2. Симв_строки, раб с текстами и файлами_2023.doc
Программирование/3 семестр/Лабораторные работы/Лаб3/: Лаб №3. Структуры данных 2023.doc
Программирование/3 семестр/лекции 3 сем/: txlib.docx  Прог2ч_лек_1_Графика_2022.ppt  Прог2ч_лек_1_Графика_2022.pptx  Прог2ч_лек_2_Рекурсия_2023.ppt  Прог2ч_лек_3_Символьные строки_2022.ppt  Прог2ч_лек_4_Структуры данных_2022.ppt  Прог2ч_лек_5_Списки_2022.ppt  Прог3ч_лек_1_Стеки_очереди_деки _2022.ppt  обзор граф библиотек.docx
Программирование/Курсовая/курсовая/: Варианты и Указания к курс_раб_2023.docx
Теория языков программирования/: readme.md  БПО-24 — 1-я подгруппа.xlsx
Теория языков программирования/3 семестр/: БПО-24 — 2-я подгруппа.xlsx  Варианты.docx  Диаграммы Вирта.docx
Теория языков программирования/3 семестр/Лекции/: readme.md
Электроника и электротехника/3 семестр/: РГР № 1 и РГР № 2.docx
(+14 files in other folders)
